Bug 422611 - Export to non-default keyserver broken
Summary: Export to non-default keyserver broken
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.04.0
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-08 05:14 UTC by Peter J. Mello
Modified: 2020-06-11 06:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.04.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter J. Mello 2020-06-08 05:14:29 UTC
SUMMARY
The option to select a keyserver to communicate with in the Key Server Dialog window is inoperative; the default keyserver is always used instead.


DESCRIPTION
Finding one of my keys to be absent from keys2.kfwebs.net, the site KGpg itself directs to when selecting the menu item Keys|Open Key URL, I entered the application settings and added it to the list of keyservers successfully. Proceeding to the menu item File|Key Server Dialog, I selected the new keyserver and the key in question from the drop-down lists and clicked the Export button.

Though the message indicated that the outcome was a success, the output below indicated that the contacted server was my default keyserver and not the specific one I had selected above. Subsequent packet capture on TCP port 11371 using Wireshark confirmed that was indeed the case. I observed that the keyserver selection drop-down on the Key Server Dialog window was ignored in every iteration of my debug attempts regardless of which server was chosen, communication always took place with the configured default keyserver.


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Kubuntu 20.04 LTS "Focal Fossa" with KDE Neon Dev-Unstable package repository active
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.71.0
Qt Version: 5.14.2
Comment 1 Rolf Eike Beer 2020-06-11 06:51:50 UTC
This has never worked…

A quick workaround: select the desired server also on the _import_ tab, as that is what is actually passed down to the export function.