use the selected export keyserver to upload keys, not the input one

As far as I can tell this has always been broken. When the code was moved into
kgpginterface it started using the selected input keyserver, and before it was
entirely ignoring it and just used the default one.

BUG: 422611